# haskell-papers

./: Makefile  README.md  hie.yaml
typed-tagless-final-interpreters/: CHANGELOG.md  LICENSE  typed-tagless-final-interpreters.cabal
typed-tagless-final-interpreters/app/: ExtF.hs  ExtI.hs  Intro1.hs  Intro2.hs  Intro3.hs  Serialize.hs  SerializeExt.hs
typed-tagless-final-interpreters/src/Part1/: ExtF.hs  ExtI.hs  Intro1.hs  Intro2.hs  Intro3.hs  Serialize.hs  SerializeExt.hs
typed-tagless-final-interpreters/src/Part2/: FlatF.hs  FlatI.hs  PushNegF.hs  PushNegFExt.hs  PushNegFI.hs  PushNegI.hs
typed-tagless-final-interpreters/src/Part3/: IntroHOIF.hs  IntroHOT.hs  TTF.hs  TTFdB.hs  TTIF.hs
