cabal-version:      3.0
name:               typed-tagless-final-interpreters
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
maintainer:         honza.hrk@gmail.com
author:             Jan HrÄek
tested-with:        ghc ==8.8.3
homepage:           https://github.com/jhrcek/haskell-papers
synopsis:           Experiments with Haskell papers
description:
    Playing with "Typed Tagless-Final Interpretations: Introductory Course" from Oleg Kiselyov

category:           Experimental
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Part1.Intro1
        Part1.Intro2
        Part1.Intro3
        Part1.Serialize
        Part1.SerializeExt
        Part1.ExtF
        Part2.FlatF
        Part2.FlatI
        Part2.PushNegFExt
        Part2.PushNegF
        Part2.PushNegFI
        Part2.PushNegI

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:    base ^>=4.13.0.0
